--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10,7))\n",
+    "Aplt.figure(figsize=(10,7))\n",
     "plt.plot(table[:,0], table[:,1], '-')\n",
     "plt.plot(x_dev_1, y_dev_1, color = \"red\",  label = \"slope =\" + str(fprime_1))\n",
     "plt.plot(x_dev_2, y_dev_2, color = \"green\",  label = \"slope =\" + str(fprime_2))\n",
@@ -398,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
